test_programs/compile_failure/noirc_frontend_tests_numeric_generic_as_struct_field_type_fails/src/main.nr

    pub struct Foo<let N: u32> {
        a: Field,
        b: N,
    }
    